--- a/Client/Pages/Admin/AddSlideDeckPage.razor
+++ b/Client/Pages/Admin/AddSlideDeckPage.razor
@@ -1,4 +1,4 @@
-﻿@page "/addSlideDeck"
+﻿@page "/admin/addSlideDeck"
 @using Learning.Shared.DbModels
 
 @inject Learning.Client.Services.IVideoService VideoService
