--- a/Client/Pages/Admin/AddSlideDeckProgramPage.razor
+++ b/Client/Pages/Admin/AddSlideDeckProgramPage.razor
@@ -1,4 +1,4 @@
-﻿@page "/addSlideDeckProgram"
+﻿@page "/admin/addSlideDeckProgram"
 @using Learning.Shared.DbModels
 
 @inject Learning.Client.Services.ISlideDeckService SlideDeckService
