--- a/Client/Pages/Admin/EditSlideDeckPage.razor
+++ b/Client/Pages/Admin/EditSlideDeckPage.razor
@@ -1,5 +1,5 @@
-﻿@page "/editSlideDeck/{id:int}"
-@page "/editSlideDeck/{slug}"
+﻿@page "/admin/editSlideDeck/{id:int}"
+@page "/admin/editSlideDeck/{slug}"
 
 @using Learning.Shared.DbModels
 
