--- a/Client/Pages/Admin/EditSlideDeckProgramPage.razor
+++ b/Client/Pages/Admin/EditSlideDeckProgramPage.razor
@@ -1,5 +1,5 @@
-﻿@page "/editSlideDeckProgram/{id:int}"
-@page "/editSlideDeckProgram/{slug}"
+﻿@page "/admin/editSlideDeckProgram/{id:int}"
+@page "/admin/editSlideDeckProgram/{slug}"
 
 @using Learning.Shared.DbModels
 
