--- a/Client/Pages/Admin/AdminListAllSlideDeckProgramsPage.razor
+++ b/Client/Pages/Admin/AdminListAllSlideDeckProgramsPage.razor
@@ -1,4 +1,4 @@
-﻿@page "/listAllSlideDeckProgramsPage"
+﻿@page "/admin/adminlistAllSlideDeckProgramsPage"
 @inject Learning.Client.Services.ISlideDeckService SlideDeckService
 @inject Learning.Client.Services.ISlideDeckProgramService SlideDeckProgramService
 @inject Learning.Client.Services.IAuthService Auth
@@ -34,33 +34,11 @@
     </Authorized>
 </AuthorizeView>
 
-@if (SlideDeckProgramsPublished != null) {
-
-    <MudContainer MaxWidth="MaxWidth.Medium">
-        <Learning.Client.Components.SlideDeckProgramList Context="SlideDeckProgramsPublished"/>
-    </MudContainer>
-} else {
-    <MudContainer MaxWidth="MaxWidth.Medium">
-        <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="200px" Height="110px" />
-        <MudDivider Class="mb-8" />
-        <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="200px" Height="110px" />
-        <MudDivider Class="mb-8" />
-        <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="200px" Height="110px" />
-    </MudContainer>
-}
 @code {
-    List<SlideDeckProgram> SlideDeckProgramsPublished;
     List<SlideDeckProgram> SlideDeckProgramsAll;
     protected override async Task OnInitializedAsync() {
-        var r = await SlideDeckProgramService.GetPublished();
-        if (r.Success) {
-            SlideDeckProgramsPublished = r.Data;
-        } else {
-            Snackbar.Add($"Could not get publushed. Error: {r.Message}", Severity.Error);
-        }
-
         if (await Auth.IsContentCreator() || await Auth.IsAdmin()) {
-            r = await SlideDeckProgramService.GetAsContentCreator();
+            var r = await SlideDeckProgramService.GetAsContentCreator();
             if (r.Success) {
                 SlideDeckProgramsAll = r.Data;
             } else {
