--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -4,36 +4,41 @@
 <MudNavMenu>
     <MudNavLink Href="allUserAvatars" Icon="@Icons.Material.Filled.ListAlt">Avatars</MudNavLink>
 
-    <MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">Content</MudText>
-    <MudNavGroup Title="Slide decks" Expanded="true">
-        <MudNavLink Href="listAllSlideDecksPage" Icon="@Icons.Custom.Uncategorized.AlertSuccess">All</MudNavLink>
-        <MudNavLink Href="listAllSlideDecksPage" Icon="@Icons.Custom.Uncategorized.AlertSuccess">Assigned to avatar</MudNavLink>
-        <MudNavLink Href="listAllSlideDecksPage" Icon="@Icons.Custom.Uncategorized.AlertSuccess">Current</MudNavLink>
-    </MudNavGroup>
-    <MudNavGroup Title="Programs" Expanded="true">
-        <MudNavLink Href="listAllSlideDeckProgramsPage" Icon="@Icons.Custom.Uncategorized.AlertSuccess">All</MudNavLink>
-        <MudNavLink Href="listAllSlideDeckProgramsPage" Icon="@Icons.Custom.Uncategorized.AlertSuccess">Assigned to avatar</MudNavLink>
-        <MudNavLink Href="listAllSlideDeckProgramsPage" Icon="@Icons.Custom.Uncategorized.AlertSuccess">Current</MudNavLink>
-    </MudNavGroup>
+    @*<MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">Content</MudText>
+        <MudNavGroup Title="Slide decks" Expanded="true">*@
+    <MudNavLink Href="listAllSlideDecksPage" Icon="@Icons.Custom.Uncategorized.AlertSuccess">Slide decks</MudNavLink>
+    @*<MudNavLink Href="listAllSlideDecksPage" Icon="@Icons.Custom.Uncategorized.AlertSuccess">Assigned to avatar</MudNavLink>
+            <MudNavLink Href="listAllSlideDecksPage" Icon="@Icons.Custom.Uncategorized.AlertSuccess">Current</MudNavLink>
+        </MudNavGroup>*@
+    @*<MudNavGroup Title="Programs" Expanded="true">*@
+    <MudNavLink Href="listAllSlideDeckProgramsPage" Icon="@Icons.Custom.Uncategorized.AlertSuccess">Programs</MudNavLink>
+    @*<MudNavLink Href="listAllSlideDeckProgramsPage" Icon="@Icons.Custom.Uncategorized.AlertSuccess">Assigned to avatar</MudNavLink>
+            <MudNavLink Href="listAllSlideDeckProgramsPage" Icon="@Icons.Custom.Uncategorized.AlertSuccess">Current</MudNavLink>
+        </MudNavGroup>*@
 
 
 
 
     <MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">Loading test</MudText>
     @foreach (var item in Menu.GetMenues()) {
-<MudNavLink Href="application/users" Icon="@Icons.Material.Outlined.PeopleAlt" Disabled="true">@item</MudNavLink>}
+        <MudNavLink Href="application/users" Icon="@Icons.Material.Outlined.PeopleAlt" Disabled="true">@item</MudNavLink>}
 
+    <AuthorizeView Roles="Admin, superuser">
+        <Authorized>
+            <MudNavLink Href="/admin/AdminIndex" Icon="@Icons.Custom.Uncategorized.AlertSuccess">Admin</MudNavLink>
+        </Authorized>
+    </AuthorizeView>
 
-    <MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">Personal</MudText>
-    <MudNavLink Href="/personal/dashboard" Match="NavLinkMatch.All" Icon="@Icons.Material.Outlined.Dashboard">Dashboard</MudNavLink>
-    <MudNavLink Href="/personal/account" Icon="@Icons.Material.Outlined.Person">Account</MudNavLink>
+            @*<MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">Personal</MudText>
+                <MudNavLink Href="/personal/dashboard" Match="NavLinkMatch.All" Icon="@Icons.Material.Outlined.Dashboard">Dashboard</MudNavLink>
+                <MudNavLink Href="/personal/account" Icon="@Icons.Material.Outlined.Person">Account</MudNavLink>
 
-    <MudNavGroup Title="Authentication" Icon="@Icons.Material.Outlined.AssignmentInd" HideExpandIcon="true">
-        <MudNavLink Href="pages/authentication/login" Icon="@Icons.Material.Outlined.InsertDriveFile">Login</MudNavLink>
-        <MudNavLink Href="pages/authentication/register" Icon="@Icons.Material.Outlined.InsertDriveFile">Register</MudNavLink>
-        <MudNavLink Href="pages/authentication/forgot-password" Icon="@Icons.Material.Outlined.InsertDriveFile">Forgot Password</MudNavLink>
-        <MudNavLink Href="pages/authentication/reset-password" Icon="@Icons.Material.Outlined.InsertDriveFile">Reset Password</MudNavLink>
-    </MudNavGroup>
+                <MudNavGroup Title="Authentication" Icon="@Icons.Material.Outlined.AssignmentInd" HideExpandIcon="true">
+                    <MudNavLink Href="pages/authentication/login" Icon="@Icons.Material.Outlined.InsertDriveFile">Login</MudNavLink>
+                    <MudNavLink Href="pages/authentication/register" Icon="@Icons.Material.Outlined.InsertDriveFile">Register</MudNavLink>
+                    <MudNavLink Href="pages/authentication/forgot-password" Icon="@Icons.Material.Outlined.InsertDriveFile">Forgot Password</MudNavLink>
+                    <MudNavLink Href="pages/authentication/reset-password" Icon="@Icons.Material.Outlined.InsertDriveFile">Reset Password</MudNavLink>
+                </MudNavGroup>*@
 
 </MudNavMenu>
 
