--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -14,3 +14,4 @@
 @using Blazored.Video.Support
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
+@using MudBlazor.ThemeManager
