changes before test publish

--- a/Client/Components/Login.razor
+++ b/Client/Components/Login.razor
@@ -67,7 +67,7 @@
         {
             case 1 :
                 login.Email = "a@a.com";
-                login.Password = "aaa";
+                login.Password = "qwe";
                 break;
             case 2:
                 login.Email = "sa@a.com";
