--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -24,7 +24,11 @@
     </MudAppBar>
     <MudDrawer @bind-Open="_drawerOpen" Elevation="1">
         <MudDrawerHeader>
-            <Learning.Client.Components.UserAvatarActiveView></Learning.Client.Components.UserAvatarActiveView>
+            <AuthorizeView>
+                <Authorized>
+                    <Learning.Client.Components.UserAvatarActiveView></Learning.Client.Components.UserAvatarActiveView>
+                    </Authorized>
+                </AuthorizeView>
         </MudDrawerHeader>
         <NavMenu />
     </MudDrawer>
